# dp-release-card

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: positioning.md  release.md  roadmap.md  schema.md
dp_release_card/: __init__.py  card.py  cli.py  csvio.py  errors.py  histogram.py  receipt.py
examples/: ages.csv
examples/outputs/: receipt.json  release-card.md  release.json
schema/: receipt.schema.json  release.schema.json
tests/: test_card.py  test_cli.py  test_csvio.py  test_examples.py  test_histogram.py  test_receipt.py
