[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "dp-release-card"
version = "0.1.0"
description = "Generate verifiable differential-privacy release cards for public-policy CSV histogram releases."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "TaupT"}]
keywords = ["differential-privacy", "privacy", "csv", "histogram", "receipt"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/tauptlab/dp-release-card"
Repository = "https://github.com/tauptlab/dp-release-card"
Issues = "https://github.com/tauptlab/dp-release-card/issues"
Changelog = "https://github.com/tauptlab/dp-release-card/blob/main/CHANGELOG.md"
Documentation = "https://github.com/tauptlab/dp-release-card#readme"

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = [
  "build>=1.2",
  "pytest>=7.0",
  "twine>=5.0",
]

[project.scripts]
dp-release-card = "dp_release_card.cli:main"

[tool.setuptools.packages.find]
include = ["dp_release_card*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
